<?xml version="1.0"?>
<package>
  <name>wsg_32_description</name>
  <version>0.0.3</version>
  <description>URDF and Xacro description files for the Weiss WSG 32 gripper with force sensing fingers.</description>
  <author email="maxsvetlik@utexas.edu">Max Svetlik</author>
  <maintainer email="maxsvetlik@utexas.edu">Max Svetlik</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/wsg_32_description</url>
  <url type="repository">https://github.com/si-machines/wsg_32_description.git</url>
  <url type="bugtracker">https://github.com/si-machines/wsg_32_description/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo</run_depend>

  <export>
  </export>
</package>
